--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="onglet">
                         <ul>
-                            <li><a href="index.html">Acceuil</a></li>
+                            <li><a href="index.html">Accueil</a></li>
                             <li><a href="Series1/Furyhorn.html">Petite légende</a></li>
                             <li><a href="Map.html">Maps</a></li>
                             <li><a href="Règles.html">Règles</a></li>
