--- a/Masgical Misfits/Nimblefoot.html
+++ b/Masgical Misfits/Nimblefoot.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="onglet">
                     <ul>
-                        <li><a href="../index.html">Acceuil</a></li>
+                        <li><a href="../index.html">Accueil</a></li>
                         <li><a href="../Map.html">Maps</a></li>
                         <li><a href="../Règles.html">Règles</a></li>>
                     </ul>
