--- a/Règles.html
+++ b/Règles.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="onglet">
                     <ul>
-                        <li><a href="index.html">Acceuil</a></li>
+                        <li><a href="index.html">Accueil</a></li>
                         <li><a href="Series1/Furyhorn.html">Petite Légende</a></li>
                         <li><a href="Map.html">Maps</a></li>
                     </ul>
